--- a/list.html
+++ b/list.html
@@ -12,6 +12,9 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body ng-controller="AppCtrl as app">
+<select>
+    <option ng-repeat="skin in app.skins">{{skin.name}}{{(skin.value / 100) | currency}}</option>
+</select>
 <div class="container">
     <div class="row search">
         <div class="col-md-6 col-md-offset-6">
@@ -23,28 +26,30 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <table class="table table-striped table-condensed">
-                <thead>
-                <tr>
-                    <th>Skin Name</th>
-                    <th>Skin Value</th>
-                    <th>Quantity</th>
-                    <th>Last Updated</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr><td colspan="4">Search: {{app.search}}</td></tr>
-                <tr ng-repeat="skin in app.skins | filter: app.search">
-                    <td>{{skin.name}}</td>
-                    <td>{{(skin.value / 100) | currency}}</td>
-                    <td>{{skin.quantity}}</td>
-                    <td>{{skin.last_updated}}</td>
-                </tr>
-                </tbody>
-            </table>
+            <!--<table class="table table-striped table-condensed">-->
+                <!--<thead>-->
+                <!--<tr>-->
+                    <!--<th>Skin Name</th>-->
+                    <!--<th>Skin Value</th>-->
+                    <!--<th>Quantity</th>-->
+                    <!--<th>Last Updated</th>-->
+                <!--</tr>-->
+                <!--</thead>-->
+                <!--<tbody>-->
+                <!--<tr><td colspan="4">Search: {{app.search}}</td></tr>-->
+                <!--<tr ng-repeat="skin in app.skins | filter: app.search">-->
+                    <!--<td>{{skin.name}}</td>-->
+                    <!--<td>{{(skin.value / 100) | currency}}</td>-->
+                    <!--<td>{{skin.quantity}}</td>-->
+                    <!--<td>{{skin.last_updated}}</td>-->
+                <!--</tr>-->
+                <!--</tbody>-->
+            <!--</table>-->
+
         </div>
     </div>
 </div>
+
 <script src="node_modules/angular/angular.min.js"></script>
 <script src="node_modules/lodash/lodash.min.js"></script>
 <script src="node_modules/moment/moment.js"></script>
