select_change() not working,,,,,, setAttribute class works but not ng-model/ng-options.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
         <div class="row">
             <div class="col-md-12 border" id="skin_list_div">
-                <!--<select class="form-control" ng-model="app.selectedSkin" ng-options="skin.name as skin.name + ' - ' + skin.currencyValue for skin in app.skins">-->
-                    <!--<option value="" disabled selected>Select your skin</option>-->
-                <!--</select>-->
+                <select class="form-control" ng-model="app.selectedSkin" ng-options="skin.name as skin.name + ' - ' + skin.currencyValue for skin in app.skins">
+                    <option value="" disabled selected>Select your skin</option>
+                </select>
             </div>
         </div>
         <div class="row">
