Created Skin Sub-Menus

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       ng-app="app">
 <head>
     <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+          href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css"
           href="app/css/app.css">
     <meta charset="UTF-8">
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 border" id="skin_list_div">
-                <select class="form-control" ng-model="app.selectedSkin" ng-options="skin.name as skin.name + ' - ' + skin.currencyValue for skin in app.skins">
+                <select id="selecttest" class="form-control" ng-model="app.selectedSkin" ng-options="skin.name as skin.name + ' - ' + skin.currencyValue for skin in app.skins">
                     <option value="" disabled selected>Select your skin</option>
                 </select>
             </div>
