--- a/test.html
+++ b/test.html
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col m6 skin_boxes"></div>
             <div class="col m6 skin_boxes"></div>
-            <a class="show-on-large waves-effect waves-light btn">Button</a>
+            <a class="show-on-large waves-effect waves-light btn">Calculate </a>
         </div>
     </div>
 
